# icebreaker-fpga-playground

./: .gitignore  Makefile  build.sbt  readme.md
murax-app/: Cargo.toml
murax-app/src/: main.rs
murax-pac/: Cargo.toml  device.x  murax.svd
murax-pac/src/: lib.rs
murax-pac/src/murax/instances/: gpioa.rs  mod.rs
murax-pac/src/murax/peripherals/: gpioa.rs
soft-core-firmware/: Cargo.toml  memory.x
soft-core-firmware/src/: main.rs
src/main/resources/: constraints.pcf  murax-app.hex  soft-core-firmware.hex  spongebob.rgb
src/main/rust/murax-app/src/: main.rs
src/main/rust/murax-pac/: build.rs  murax.svd
src/main/rust/murax-pac/src/murax/: metadata.rs  mod.rs
src/main/rust/murax-pac/src/murax/instances/: gpioa.rs
src/main/scala/ice/: ColorSensor.scala  Echo.scala  HDMI.scala  HexCounter.scala  LedAnimation.scala  LedMatrix8x8.scala  LedPanel.scala  Mic.scala  MuraxSoC.scala  RGBLed.scala  STP08cp05.scala  SharpMemoryLCD.scala  Sink.scala  TTA.scala  WSBlinky.scala
src/main/scala/ice/blackbox/: Blackbox.scala
src/main/scala/ice/boards/: IceBreaker.scala
src/main/scala/ice/comps/: WS2812b.scala
src/main/scala/ice/lib/: FirFilter.scala  UartSink.scala  WS2812b.scala
src/main/scala/ice/pmods/: DIPSwitch.scala  DVI.scala  HUB75.scala  I2SMic.scala  I2SMicrophone.scala  LCD.scala  LedMatrix.scala  PDMMic.scala  PMOD.scala  SevenSegmentDisplay.scala  SnapOff.scala  TCS3200.scala
src/main/scala/ice/tta/: CoreFU.scala  FunctionalUnit.scala  ImmFU.scala  MapFU.scala  StackMapFU.scala  XBar.scala
