[package]
name = "soft-core-firmware"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
license = "MIT/APACHE"

[dependencies]
panic-halt = "0.2.0"
riscv = "0.6.0"
riscv-rt = "0.8.0"

[[bin]]
name = "soft-core-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
